# finiq-pptforger

./: .gitignore  APP_DESIGN.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: pyproject.toml
backend/engine/: ppt_generator.py
backend/tests/: create_test_template.py  inspect_pptx.py  verify_input.json  verify_output.pptx
electron/: excelReader.ts  main.ts  pptGenerator.ts  preload.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/templates/: Deal Summary.pptx
frontend/public/templates/Deal_Summary_Template_1.0/: Model.xlsx  deal-summary.pptx  price-trend.xlsx
frontend/src/: App.tsx  index.css  init.ts  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: FewShotEditor.tsx  InputForm.tsx  InvestmentPoints.tsx  OwnershipTable.tsx  PricePoints.tsx  ResultView.tsx  RiskPoints.tsx  SettingsModals.tsx  ShareholdersTable.tsx  SummarySection.tsx  TemplateModal.tsx
frontend/src/hooks/: useCompanyData.ts  useGeminiAPI.ts  useOwnershipCalculation.ts
frontend/src/utils/: constants.ts  numberUtils.ts
main/: index.ts
public/: template_ppt.pptx
renderer/src/: App.tsx  index.css
shared/: schema.json
src/: ppt_generator.py
tests/: test_data.json
